# QuakeRunner

./: CMakeLists.txt  README.md  main.cpp
icons/: icon.icns
view/: quakerunner.cpp  quakerunner.h  quakerunner.ui
